[package]
name = "falling_sand_rs"
version = "0.1.0"
authors = ["Connor Magson <connormagson@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = { version = "0.4.1", features = ["opengl"] }
rand = "0.7.3"
rayon = "1.5.0"
nalgebra = "0.23.1"

[profile.dev]
opt-level = 2